--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,8 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+.pnpm/**
+node_modules/.pnpm/**
+node_modules/.bin/**
+node_modules/openai
+pnpm-lock.yaml
