--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,9 @@ on:
   release:
     types: [created]
   workflow_dispatch:
-    inputs:
-      version:
-        description: '版本号 (如 v1.0.0)'
-        required: true
-        default: 'v1.0.0'
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -29,14 +27,21 @@ jobs:
         run: npm install -g @vscode/vsce
 
       - name: Package Extension
-        run: vsce package
+        run: |
+          vsce package
+          echo "VSIX_FILE=$(ls *.vsix)" >> $GITHUB_ENV
 
-      - name: Upload VSIX to Release
-        uses: actions/upload-release-asset@v1
+      - name: Upload to Release
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ${{ env.VSIX_FILE }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Artifact (Manual)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./translate-helper-*.vsix
-          asset_name: translate-helper-${{ github.event.release.tag_name }}.vsix
-          asset_content_type: application/octet-stream
+          name: extension-vsix
+          path: ${{ env.VSIX_FILE }}
