feat: Migrate from npm to pnpm for package management and CI workflows.

--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "pnpm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
   },
