--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '24'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Install vsce
-        run: npm install -g @vscode/vsce
+        run: pnpm add -g @vscode/vsce
 
       - name: Package Extension
         run: |
