chore: Move pnpm onlyBuiltDependencies configuration from pnpm-workspace.yaml to package.json.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "translate-helper",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "protobufjs"
+    ]
+  },
   "displayName": "Translate Helper",
   "description": "智能翻译助手 - 基于大模型的划词翻译和变量命名建议",
   "version": "1.1.0",
