--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "displayName": "Translate Helper",
   "description": "智能翻译助手 - 基于大模型的划词翻译和变量命名建议",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "publisher": "lockp111",
   "repository": {
     "type": "git",
@@ -206,14 +206,13 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "node esbuild.js --production",
-    "watch": "node esbuild.js --watch"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/node": "^20.19.30",
     "@types/vscode": "^1.104.0",
-    "esbuild": "^0.27.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
